--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="main.js"></script>
 	<link rel="stylesheet" href="reset.css" />
 	<link rel="stylesheet" href="styles.css" />
-	<title>Sundtkvartalet Dashbboard</title>
+	<title>Quizboard</title>
 </head>
 
 <body>
