--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
+  <div id="main"></div>
 	<script type="text/javascript">
-		Elm.Main.fullscreen();
+  var app = Elm.Main.init({
+    node: document.getElementById('main'),
+    flags: 1
+  });
 	</script>
 </body>
 
